function(copyRes)
    file(COPY res DESTINATION .)
endfunction()

add_subdirectory(TestScene)
add_subdirectory(Shaders)
add_subdirectory(Lights)
add_subdirectory(Particles)
add_subdirectory(PixelShadows)
add_subdirectory(GeometryLight)
add_subdirectory(GLTransitions)
add_subdirectory(Gravity)
add_subdirectory(OSM)
add_subdirectory(TrueType)
add_subdirectory(NormalMap)
add_subdirectory(Snake)
add_subdirectory(Imgui)
add_subdirectory(Fractal)
