set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")

function(copyRes)
    file(COPY res DESTINATION .)
endfunction()

add_subdirectory(TestScene)
add_subdirectory(Shaders)
add_subdirectory(Lights)
add_subdirectory(Particles)
add_subdirectory(PixelShadows)
add_subdirectory(GeometryLight)
add_subdirectory(GLTransitions)
add_subdirectory(Gravity)
add_subdirectory(OSM)
add_subdirectory(TrueType)
add_subdirectory(NormalMap)
add_subdirectory(Snake)
add_subdirectory(Imgui)
add_subdirectory(Fractal)
add_subdirectory(SoftBody)
add_subdirectory(Parallax)
add_subdirectory(DayNight)
add_subdirectory(Matrix2x2)

option(LUA_TEST "build LuaTest example" ON)

if(LUA_TEST)
    add_subdirectory(LuaTest)
endif()

add_subdirectory(RayTracer)
add_subdirectory(Audio)
